added password basics

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".pinEntry" android:screenOrientation="portrait" />
         <activity android:name=".Confirmation"/>
         <activity android:name=".Audio_Record" />
+        <activity android:name=".passwordEntry" />
     </application>
 
 </manifest>
